Updated Covid-19 rules and info

--- a/booking.html
+++ b/booking.html
@@ -96,7 +96,7 @@
                     <br>
                     <font size="7" color="red">WHO GET ACCESS? </font>
                     <br>
-                    <font size="5" color="red">You need to book a machine and/or a worktabel to get access to Makerlab! <a href="./assets/COVID Protocol-v2.pdf">Read More.</a> </font>
+                    <font size="5" color="red">You need to book a machine and/or a worktabel to get access to Makerlab! <a href="./assets/COVID-19%20Guidelines_Makerlab.pdf">Read More.</a> </font>
                     <br>
                     <br>
                     <br>
