--- a/signup.html
+++ b/signup.html
@@ -111,6 +111,7 @@
                                 <a href="https://kea.safeticket.dk/">
                                     <img class="img-portfolio img-responsive" src="img/signUp_LaserFundamentals.png">
                                 </a>
+                                <p><font  color="red">No Fundamental Courese during current COVID-19 restrictions.</font></p>
                             </div>
                         </div>
                         <!-- 3D Printing Fundamentals -->
@@ -119,6 +120,7 @@
                                 <a href="https://kea.safeticket.dk/">
                                     <img class="img-portfolio img-responsive" src="img/signUp_3DFundamentals.png">
                                 </a>
+                                <p><font  color="red">No Fundamental Courese during current COVID-19 restrictions.</font></p>
                             </div>
                         </div>
                         <!-- Textile Printing Fundamentals -->
@@ -127,6 +129,7 @@
                                 <a href="https://kea.safeticket.dk/">
                                     <img class="img-portfolio img-responsive" src="img/signUp_TextileFundamentals.png">
                                 </a>
+                                <p><font  color="red">No Fundamental Courese during current COVID-19 restrictions.</font></p>
                             </div>
                         </div>
                         
@@ -136,6 +139,7 @@
                                 <a href="https://kea.safeticket.dk/">
                                     <img class="img-portfolio img-responsive" src="img/signUp_CNCFundamentals.png">
                                 </a>
+                                <p><font  color="red">No Fundamental Courese during current COVID-19 restrictions.</font></p>
                             </div>
                         </div> 
                          <!--
@@ -155,6 +159,7 @@
                                 <a href="https://docs.google.com/spreadsheets/d/1kavphcetpQqmf0qFFeAy4nQ3SzR8LMQ-g8HaLbZVYyQ/edit#gid=637377721">
                                     <img class="img-portfolio img-responsive" src="img/signUp_ScreenFundamentals.png">
                                 </a>
+                                <p><font  color="red">No Fundamental Courese during current COVID-19 restrictions.</font></p>
                             </div>
                         </div> 
                        
