--- a/store_shopNew.html
+++ b/store_shopNew.html
@@ -40,29 +40,18 @@
                 <li class="sidebar-brand">
                     <a href="index.html#top" onclick=$("#menu-close").click();>Yes, sir!</a>
                 </li>
-                <li>
-                    <a href="index.html#top" onclick=$("#menu-close").click();>Home</a>
-                </li>
-                <li>
-                    <a href="index.html#about" onclick=$("#menu-close").click();>About</a>
-                </li>
-                <li>
-                    <a href="index.html#services" onclick=$("#menu-close").click();>Repository links</a>
-                </li>
+               <li>
+                <a href="index.html" onclick=$("#menu-close").click();>Makerlab</a>
+            </li>
+            
+            <li>
+                <a href="kea_store.html" onclick=$("#menu-close").click();>KEA Store</a>
+            </li>
+    
+            <li>
+                <a href="tutorialMisc.html" onclick=$("#menu-close").click();>Misc Tutorials</a>
+            </li>
 
-                <li>
-                    <a href="index.html#contact" onclick=$("#menu-close").click();>Contact</a>
-                </li>
-                <li>
-                    <a href="assets.html" onclick=$("#menu-close").click();>Assets</a>
-                </li>
-                <li>
-                    <a href="booking.html" onclick=$("#menu-close").click();>Booking</a>
-                </li>
-
-                <li>
-                    <a href="tutorial.html" onclick=$("#menu-close").click();>Tutorials</a>
-                </li>
             </ul>
         </nav>
 
