Added worktable bookng

--- a/index.html
+++ b/index.html
@@ -272,6 +272,20 @@
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-calendar fa-stack-1x text-primary"></i>
+                            </span>
+                                <h4>
+                                    <strong>Worktables</strong>
+                                </h4>
+                                <p>Book a work table</p>
+                                <br><br>
+                                <a href="https://docs.google.com/spreadsheets/d/1OFlcz-9Z1hUxmlW3S8r-3W4uFrqaVC2T0Ork1d7mdZo/edit#gid=0" class="btn btn-light">Book a work table</a>
+                            </div>
+                        </div>
+                        <div class="col-sm-2 col-sm-8">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-file-text fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
