Fixerd menu machine pages
Smal bug fixes adn spelling mistakes

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                                 <i class="fa fa-calendar fa-stack-1x text-primary"></i> 
                             </span>
                                 <h4>
-                                    <strong>Laserskærer</strong>
+                                    <strong>Laser Cutter</strong>
                                 </h4>
                                 <p>Video tutorial, assets files, and a lot more...</p>
                                 <br>
@@ -179,7 +179,7 @@
                                 </h4>
                                 <p>Video tutorial, assets files, and a lot more...</p>
                                 <br>
-                                <a href="machinePageScreenPrint.html" class="btn btn-light">Lets do it!</a>
+                                <a href="machinePage_ScreenPrint.html" class="btn btn-light">View Tutorials</a>
                             </div>
                         </div>
                         
@@ -246,7 +246,7 @@
                                 <i class="fa fa-calendar fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Vinylskærer</strong>
+                                    <strong>Vinyl Cutter</strong>
                                 </h4>
                                 <p>Video tutorial, assets files, and a lot more...</p>
                                 <br>
@@ -265,7 +265,7 @@
                                 </h4>
                                 <p>Video tutorial, assets files, and a lot more...</p>
                                 <br>
-                                <a href="machinePage_WoodWorkshop.html" class="btn btn-light">View Tutorial</a>
+                                <a href="machinePage_WoodWorkshop.html" class="btn btn-light">View Tutorials</a>
                             </div>
                         </div>
                         <div class="col-sm-2 col-sm-8">
