--- a/machinePage_3DPrint_Ultimaker.html
+++ b/machinePage_3DPrint_Ultimaker.html
@@ -46,11 +46,9 @@
                         </div>
                         <div class="main-menubar d-flex align-items-center">
                             <nav class="hide">
-                                <a href="index.html">Home</a>
-                                <a href="assets.html">Assetes</a>
-                                <a href="tutorial.html">Tutorials</a>
-                                <a href="signup.html">Workshop Sign-Up</a>
+                                <a href="index.html">Makerlab</a>
                                 <a href="kea_store.html">KEA Store</a>
+                                <a href="tutorialMisc.html">Misc Tutorials</a>
                             </nav>
                             <div class="menu-bar"><span class="lnr lnr-menu"></span></div>
                         </div>
@@ -157,7 +155,7 @@
                             <a class="text-uppercase view-details" href="https://kea-makerlab.github.io/hello/learningPath_3DPrint.html">Download</a>
                             <h2 class="text-uppercase">Learning Path: <br> 3D Printing</h2>
                             <p>
-                                Makerlabs Chatbot will help you get started with FDM 3D Printing in no time. No anoying comersials or "fluff talk", optimized to get you of tha ground printring as fastat as possible. 
+                                Makerlabs Chatbot will help you get started with FDM 3D Printing in no time. No anoying comersials or "fluff talk", optimized to get you of the ground printring as fastat as possible. 
                             </p>
                             
                             
