--- a/machinePage_Sticker.html
+++ b/machinePage_Sticker.html
@@ -41,7 +41,7 @@
                 <div class="header-wrap">
                     <div class="header-top d-flex justify-content-between align-items-center">
                         <div class="logo ">
-                            <a class="text-uppercase view-detailsBook" href="booking.html"><nobr>Book Machine</nobr></a>
+                            <a class="text-uppercase view-detailsBook" href="https://docs.google.com/spreadsheets/d/1YZH05q6FNcvmWgt3Zo22xpYNsM-S8vzdvAgU1EJGF_0/edit#gid=1870025087"><nobr>Book Machine</nobr></a>
                             <!-- <a href="booking.html"><img src="img/bookMachine.png" alt=""></a> -->
                         </div>
                         <div class="main-menubar d-flex align-items-center">
