fixed linking error

--- a/machinePage_Textile.html
+++ b/machinePage_Textile.html
@@ -170,7 +170,7 @@
                         <img class="d-block mx-auto img-fluid" src="img/downloadPunktlektion.png" alt="">
                         <div class="desc">
                             <br>
-                            <a class="text-uppercase view-details" href="https://kea-makerlab.github.io/hello/assets/ucpinst-5.38.57.95.zip">Download</a>
+                            <a class="text-uppercase view-details" href="https://kea-makerlab.github.io/hello/tutorials/textilePrinter/textilePrinter_Eng.pdf">Download</a>
                             <h2 class="text-uppercase">Manual Textileprinter</h2>
                             <p>Detailed description on how to prepare your print file and print workflow.</p>
                             
