--- a/machinePage_3DPrint_UltimakerPP.html
+++ b/machinePage_3DPrint_UltimakerPP.html
@@ -107,7 +107,7 @@
             <div class="container">
 
                 <div class="embed-responsive embed-responsive-16by9">
-                     <iframe src="https://studkea-my.sharepoint.com/personal/andh_kea_dk/_layouts/15/Doc.aspx?sourcedoc={513ae9c3-5cc9-4672-a029-c599b262003b}&amp;action=embedview&amp;wdAr=1.7777777777777777" width="962px" height="565px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
+                     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQXK7LWIDbPXLQ_WnoxtsTs9uzNsedTgcRsB6zFP0v2wjb_M3eTkhyS_aLQehNaFXbYyoVcucDr0-48/embed?start=false&loop=false&delayms=30000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
                 </div>
 
             </div>
