--- a/kea_store.html
+++ b/kea_store.html
@@ -171,8 +171,9 @@
                     <br>
                     <p> <b>OPENING TIME:</b></p>
                         <ul class="list-unstyled">
-                           <!--  <li> <font  color="red"><i class="fa fa-asterisk" aria-hidden="true"></i> <b>COVID-19 Closed.</b> </font></li>-->
-                            <li><i class="fa fa-clock-o fa-fw"></i> <b>Mon-Fri:</b> kl:  14-16</li>
+                            <li> <font  color="red"><i class="fa fa-asterisk" aria-hidden="true"></i> <b>COVID-19 Closed.</b> </font></li>
+                            
+                           <!--  <li><i class="fa fa-clock-o fa-fw"></i> <b>Mon-Fri:</b> kl:  14-16</li>-->
                             
                         </ul>
   
