--- a/index.html
+++ b/index.html
@@ -356,10 +356,11 @@
                     <p> <b>OPENING TIME:</b></p>
                         <ul class="list-unstyled">
                           <!--  <li> <font  color="red"><i class="fa fa-asterisk" aria-hidden="true"></i> <b>Closed for summer! Open 26 Aug.</b> </font>-->
-                            <li> <font  color="red"><i class="fa fa-asterisk" aria-hidden="true"></i> <b>COVID-19 - Only students with reservation can enter Makerlab.</b> </font></li>
+                            <li> <font  color="red"><i class="fa fa-asterisk" aria-hidden="true"></i> <b>COVID-19 Closed, you can apply for access through your teacher.</b> </font></li>
+                            <!--
                             <li><i class="fa fa-clock-o fa-fw"></i> <b>Workshop:</b> Mon-Fri,  09-18</li>
                             <li><i class="fa fa-clock-o fa-fw"></i><b>Work area:</b> Mon-Fri, 09-22</li>
-                        </ul>
+                        </ul>-->
   
                     
                     <br>
