Addded z450 and Figure 4
Addded z450 and Figure 4

--- a/index.html
+++ b/index.html
@@ -117,11 +117,39 @@
                                 <i class="fa fa-calendar fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>3D Print</strong>
+                                    <strong>3D Print: Ultimaker</strong>
                                 </h4>
                                 <p>Video tutorial, assets files, and a lot more...</p>
                                 <br>
                                 <a href="machinePage_3DPrint_Ultimaker.html" class="btn btn-light">Reserve</a>
+                            </div>
+                        </div>
+                        <div class="col-sm-2 col-sm-8">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-calendar fa-stack-1x text-primary"></i>
+                            </span>
+                                <h4>
+                                    <strong>3D Print: Z450</strong>
+                                </h4>
+                                <p>Video tutorial, assets files, and a lot more...</p>
+                                <br>
+                                <a href="machinePage_3DPrint_Gips.html" class="btn btn-light">Reserve</a>
+                            </div>
+                        </div>
+                        <div class="col-sm-2 col-sm-8">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-calendar fa-stack-1x text-primary"></i>
+                            </span>
+                                <h4>
+                                    <strong>3D Print: Figure 4</strong>
+                                </h4>
+                                <p>Video tutorial, assets files, and a lot more...</p>
+                                <br>
+                                <a href="machinePage_3DPrint_Figure4.html" class="btn btn-light">Reserve</a>
                             </div>
                         </div>
                         <div class="col-sm-2 col-sm-8">
