--- a/machinePage_Tshirt.html
+++ b/machinePage_Tshirt.html
@@ -41,7 +41,7 @@
                 <div class="header-wrap">
                     <div class="header-top d-flex justify-content-between align-items-center">
                         <div class="logo">
-                            <a class="text-uppercase view-detailsBook" href="https://docs.google.com/spreadsheets/d/1ZRMyayOggSfcUMLIi4TI3d5ObQCKj78PicvZTubFzcc/edit#gid=1870025087"><nobr>Book Machine</nobr></a>
+                            <a class="text-uppercase view-detailsBook" href="https://kea.topdesk.net/"><nobr>Book Machine</nobr></a>
                             <!-- <a href="booking.html"><img src="img/bookMachine.png" alt=""></a> -->
                         </div>
                         <div class="main-menubar d-flex align-items-center">
