Link worktable to topdesk

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                                 </h4>
                                 <p>Book a work table</p>
                                 <br><br>
-                                <a href="https://docs.google.com/spreadsheets/d/1OFlcz-9Z1hUxmlW3S8r-3W4uFrqaVC2T0Ork1d7mdZo/edit#gid=0" class="btn btn-light">Book a work table</a>
+                                <a href="https://kea.topdesk.net/" class="btn btn-light">Book a work table</a>
                             </div>
                         </div>
                         <div class="col-sm-2 col-sm-8">
