--- a/machinePage_CNC.html
+++ b/machinePage_CNC.html
@@ -296,7 +296,7 @@
                         <img class="d-block mx-auto img-fluid" src="img/downloadTemplateFile.png" alt="">
                         <div class="desc">
                             <br>
-                            <a class="text-uppercase view-details" href=./assets/Flexicam%20Viper%20in%20Makerlab_V7.cps>Download</a>
+                            <a class="text-uppercase view-details" href=./assets/CNC%20Templates.zip>Download</a>
                         
                             <h2 class="text-uppercase">CNC Templates</h2>
                             <p><i class="fa fa-asterisk" aria-hidden="true"></i>
