--- a/machinePage_Textile.html
+++ b/machinePage_Textile.html
@@ -95,7 +95,7 @@
         </section>
 
         <!-- VIDEO -->
- <!--
+
         <section class="about-area  pb-30">
             <div class="container">
                 <div class="row align-items-center justify-content-between">
@@ -109,7 +109,7 @@
             <div class="container">
 
                 <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/w2AZItDr0qY" allowfullscreen=""></iframe>
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/eRXNlwDYFuw" allowfullscreen=""></iframe>
                 </div>
 
             </div>
