--- a/index.html
+++ b/index.html
@@ -62,7 +62,17 @@
             <h2>REPOSITORY</h2>
             <br>
             <a href="#MLservices" class="btn btn-dark btn-lg">Find Out More</a>
+                <div>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <a href="https://bit.ly/makerlabAccess"><button type="button" class="btn btn-primary btn-lg" > <strong>JOIN Makerlab Access Cource here!</strong> </button> </a>
+                </div>
         </div>
+      
     </header>
 
     <!-- About -->
