--- a/machinePage_3DPrint_Ultimaker.html
+++ b/machinePage_3DPrint_Ultimaker.html
@@ -41,7 +41,7 @@
                 <div class="header-wrap">
                     <div class="header-top d-flex justify-content-between align-items-center">
                         <div class="logo">
-                            <a class="text-uppercase view-detailsBook" href="https://kea.topdesk.net/"><nobr>Book Machine</nobr></a>
+                            <a class="text-uppercase view-detailsBook" href="https://kea.topdesk.net/tas/public/ssp/content/page/assetreservationplanner?assetType=3D+printer&assetType=Worktable" target="_blank"><nobr>Book Machine</nobr></a>
                             <!-- <a href="booking.html"><img src="img/bookMachine.png" alt=""></a> -->
                         </div>
                         <div class="main-menubar d-flex align-items-center">
