Landing page for all labs, and implemented lab16 site

--- a/kea_store.html
+++ b/kea_store.html
@@ -38,10 +38,16 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="index.html#top" onclick=$("#menu-close").click();>Chekov reporting!</a>
+                <a href="index.html#top" onclick=$("#menu-close").click();>NAVIGATION</a>
             </li>
             <li>
-                <a href="index.html" onclick=$("#menu-close").click();>Makerlab</a>
+                <a href="index.html" onclick=$("#menu-close").click();>Start</a>
+            </li>
+            <li>
+                <a href="makerlab.html" onclick=$("#menu-close").click();>Makerlab</a>
+            </li>
+            <li>
+                <a href="lab16.html" onclick=$("#menu-close").click();>LAB16</a>
             </li>
             
             <li>
