--- a/makerlab.html
+++ b/makerlab.html
@@ -238,7 +238,7 @@
                                 </h4>
                                 <p>Video tutorial, assets files, and a lot more...</p>
                                 <br>
-                                <a href="machinePage_ScreenPrint.html" class="btn btn-light">View Tutorials</a>
+                                <a href="machinePage_Riso.html" class="btn btn-light">View Tutorials</a>
                             </div>
                         </div>
                         
@@ -253,7 +253,7 @@
                                 </h4>
                                 <p>Video tutorial, assets files, and a lot more...</p>
                                 <br>
-                                <a href="machinePage_ScreenPrint.html" class="btn btn-light">View Tutorials</a>
+                                <a href="machinePage_MiMake.html" class="btn btn-light">View Tutorials</a>
                             </div>
                         </div>
                         
