--- a/machinePage_MiMake.html
+++ b/machinePage_MiMake.html
@@ -140,7 +140,7 @@
 
                         <div class="desc">
                             <br>
-                            <a class="text-uppercase view-details" href="https://kea-makerlab.github.io/hello/tutorials/screenPrinting/Mi Make Guideline .pdf">Download</a>
+                            <a class="text-uppercase view-details" href="https://kea-makerlab.github.io/hello/tutorials/screenPrinting/Mi Make Guideline1.pdf">Download</a>
                             <h2 class="text-uppercase">Step By Step Guide PDF</h2>
                             <p>
                                 Follow this detailed step by step guide to make your frame print frame.
@@ -286,6 +286,7 @@
         <script src="js/waypoints.min.js"></script>
         <script src="js/jquery.counterup.min.js"></script>
         <script src="js/main.js"></script>
+        </div>
 </body>
 
 </html>
