Fixed menu linking machine page

--- a/machinePage_3DPrint_Markeforged.html
+++ b/machinePage_3DPrint_Markeforged.html
@@ -46,7 +46,8 @@
                         </div>
                         <div class="main-menubar d-flex align-items-center">
                             <nav class="hide">
-                                <a href="index.html">Makerlab</a>
+                                <a href="makerlab.html">Makerlab</a>
+                                <a href="lab16.html">LAB 16</a>
                                 <a href="kea_store.html">KEA Store</a>
                                 <a href="tutorialMisc.html">Misc Tutorials</a>
                             </nav>
@@ -65,7 +66,7 @@
                 <div class="row justify-content-center generic-height align-items-center">
                     <div class="col-lg-4">
                         <div class=" text-left">
-                            <img class="d-block mx-auto img-fluid" src="img/Machines/Markforged.jpg" alt="">
+                            <img class="d-block mx-auto img-fluid" src="img/Machines/Markforged.png" alt="">
                             
 
                         </div>
@@ -198,43 +199,43 @@
                 </div>
                 <div class="row gallery-item">
                     <div class="col-md-4 ">
-                        <a href="img/3Dprint/hus2.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/3Dprint/hus2.jpg);"></div>
+                        <a href="img/Markforged/8.jpeg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/Markforged/8.jpeg);"></div>
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="img/3Dprint/sort.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/3Dprint/sort.jpg);"></div>
+                        <a href="img/Markforged/13.jpeg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/Markforged/13.jpeg);"></div>
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="img/3Dprint/elefant.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/3Dprint/elefant.jpg);"></div>
+                        <a href="img/Markforged/6.jpeg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/Markforged/6.jpeg);"></div>
                         </a>
                     </div>
                     <div class="col-md-6">
-                        <a href="img/3Dprint/landskab.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/3Dprint/landskab.jpg);"></div>
+                        <a href="img/Markforged/4.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/Markforged/4.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-6">
-                        <a href="img/3Dprint/hus.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/3Dprint/hus.jpg);"></div>
+                        <a href="img/Markforged/10.jpeg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/Markforged/10.jpeg);"></div>
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="img/3Dprint/vase.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/3Dprint/vase.jpg);"></div>
+                        <a href="img/Markforged/11.jpeg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/Markforged/11.jpeg);"></div>
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="img/3Dprint/holder.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/3Dprint/holder.jpg);"></div>
+                        <a href="img/Markforged/1.png" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/Markforged/1.png);"></div>
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="img/3Dprint/cykel.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/3Dprint/cykel.jpg);"></div>
+                        <a href="img/Markforged/12.jpeg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/Markforged/12.jpeg);"></div>
                         </a>
                     </div>
                 </div>
@@ -305,6 +306,7 @@
         <script src="js/waypoints.min.js"></script>
         <script src="js/jquery.counterup.min.js"></script>
         <script src="js/main.js"></script>
+         </div>
 </body>
 
 </html>
