--- a/machinePage_Vinyl.html
+++ b/machinePage_Vinyl.html
@@ -48,11 +48,10 @@
                         </div>
                         <div class="main-menubar d-flex align-items-center">
                             <nav class="hide">
-                                <a href="index.html">Home</a>
-                                <a href="assets.html">Assetes</a>
-                                <a href="tutorial.html">Tutorials</a>
-                                <a href="signup.html">Workshop Sign-Up</a>
+                                <a href="makerlab.html">Makerlab</a>
+                                <a href="lab16.html">LAB 16</a>
                                 <a href="kea_store.html">KEA Store</a>
+                                <a href="tutorialMisc.html">Misc Tutorials</a>
                             </nav>
                             <div class="menu-bar"><span class="lnr lnr-menu"></span></div>
                         </div>
