--- a/machinePage_Textile.html
+++ b/machinePage_Textile.html
@@ -46,7 +46,8 @@
                         </div>
                         <div class="main-menubar d-flex align-items-center">
                             <nav class="hide">
-                                <a href="index.html">Makerlab</a>
+                                <a href="makerlab.html">Makerlab</a>
+                                <a href="lab16.html">LAB 16</a>
                                 <a href="kea_store.html">KEA Store</a>
                                 <a href="tutorialMisc.html">Misc Tutorials</a>
                             </nav>
