--- a/machinePage_WoodWorkshop.html
+++ b/machinePage_WoodWorkshop.html
@@ -38,30 +38,24 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="index.html#top" onclick=$("#menu-close").click();>Live long and prosper!</a>
+                <a href="index.html#top" onclick=$("#menu-close").click();>NAVIGATION</a>
             </li>
             <li>
-                <a href="index.html#top" onclick=$("#menu-close").click();>Home</a>
+                <a href="index.html" onclick=$("#menu-close").click();>Start</a>
             </li>
             <li>
-                <a href="index.html#about" onclick=$("#menu-close").click();>About</a>
+                <a href="makerlab.html" onclick=$("#menu-close").click();>Makerlab</a>
             </li>
             <li>
-                <a href="index.html#services" onclick=$("#menu-close").click();>Repository links</a>
+                <a href="lab16.html" onclick=$("#menu-close").click();>LAB16</a>
             </li>
-
+            
             <li>
-                <a href="index.html#contact" onclick=$("#menu-close").click();>Contact</a>
+                <a href="kea_store.html" onclick=$("#menu-close").click();>KEA Store</a>
             </li>
+    
             <li>
-                <a href="assets.html" onclick=$("#menu-close").click();>Assets</a>
-            </li>
-            <li>
-                <a href="booking.html" onclick=$("#menu-close").click();>Booking</a>
-            </li>
-
-            <li>
-                <a href="tutorial.html" onclick=$("#menu-close").click();>Tutorials</a>
+                <a href="tutorialMisc.html" onclick=$("#menu-close").click();>Misc Tutorials</a>
             </li>
         </ul>
     </nav>
