Updated LAB 16 page

--- a/ydelsesKatalogStuderendeDK_v2.html
+++ b/ydelsesKatalogStuderendeDK_v2.html
@@ -77,7 +77,7 @@
         <p>Booking finder sted på Makerlabs hjemmeside: <a href="https://kea-makerlab.github.io/hello/booking.html">https://kea-makerlab.github.io/hello/booking.html</a></p>
         <p>Til booking skal man bruge sin KEA-mail ( ikke gmail hotmail eller andet)</p>
         <p>Laser, Digital tekstilprinter og T- shirt printer kan bookes i maksimum 2 timer 2 x om ugen.</p>
-        <p>3D printere kan maksimum bookes 2 gange om ugen. Der er ikke tidsinterval , grundet 3D prints natur, der kan løbe fra ½ time til 24 timer eller mere, afhængigt af printopgave.</p>
+        <p>3D printere kan maksimum bookes 2 maskiner 2 gange om ugen. Der er ikke tidsinterval , grundet 3D prints natur, der kan løbe fra ½ time til 24 timer eller mere, afhængigt af printopgave.</p>
         <p>CNC kan ligeledes bookes. Her skal der laves en særskilt aftale med Anders Haldin eller studentermedhjælper Thorbjørn Fregal.</p>
         <p>Makiner, som ikke er i brug, kan benyttes uden booking ( tjek altid bookingskema) - dog ikke CNC, som kræver særskilt aftale. Såfremt man har booket en maskine og ikke møder op til tiden, har man ikke krav på maskinen - her gælder 15 minutters reglen. Studerende, som booker maskiner uden brug eller aflysning i tide, kan få karantæne fra Makerlab i en given periode.</p>
         <h2 id="materialer">MATERIALER</h2>
