Model workshop added

--- a/lab16.html
+++ b/lab16.html
@@ -226,6 +226,21 @@
                                 <a href="machinePage_Vaquform.html" class="btn btn-light"> Show me how.</a>
                             </div>
                         </div>
+                        
+                         <div class="col-sm-2 col-sm-8">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-calendar fa-stack-1x text-primary"></i> 
+                            </span>
+                                <h4>
+                                    <strong>Model Workshopr</strong>
+                                </h4>
+                                <p>Selection of tools and smaller machines.</p>
+                                <br>
+                                <a href="machinePage_Model%20Workshop.html" class="btn btn-light">Show me</a>
+                            </div>
+                        </div>
                       <!-- 
                         <div class="col-sm-2 col-sm-8">
                             <div class="service-item">
