--- a/machinePage_Vaquform.html
+++ b/machinePage_Vaquform.html
@@ -265,15 +265,14 @@
 
 
 
-        <!-- Map -->
-        <section id="MLcontact" class="map">
-            <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2248.8553841670546!2d12.552800315858478!3d55.691501980537!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465253abae55267d%3A0x7f06e00bd751130a!2sKEA+-+Copenhagen+School+of+Design+and+Technology!5e0!3m2!1sen!2sdk!4v1484077094371"></iframe>
-            <br />
+          <!-- Map -->
+    <section id="MLcontact" class="map">
+        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2247.999755828433!2d12.536954316031135!3d55.7063760030391!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46525248eb13378b%3A0xfb49444f2d16c1a6!2sKEA%20Copenhagen%20School%20of%20Design%20%26%20Technology!5e0!3m2!1sen!2sdk!4v1639397306844!5m2!1sen!2sdk"></iframe>
+        <br/>
 
-            <small>
-                <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
-            </small>
-        </section>
+        
+            
+    </section>
 
         <!-- Footer -->
         <footer>
