Airbrush page added

--- a/lab16.html
+++ b/lab16.html
@@ -227,6 +227,21 @@
                             </div>
                         </div>
                         
+                        <div class="col-sm-2 col-sm-8">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-calendar fa-stack-1x text-primary"></i> 
+                            </span>
+                                <h4>
+                                    <strong>Airbrush Station</strong>
+                                </h4>
+                                <p>Video tutorial, assets files, and a lot more....</p>
+                                <br>
+                                <a href="machinePage_Airbrush.html" class="btn btn-light">Show me</a>
+                            </div>
+                        </div>
+                        
                          <div class="col-sm-2 col-sm-8">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
