Updated Phone numbers for both labs

--- a/lab16.html
+++ b/lab16.html
@@ -340,7 +340,7 @@
                     <p>KEA / KØBENHAVNS ERHVERVSAKADEMI
                         <br>Lygtenh 16, Lokale: B002</p>
                     <ul class="list-unstyled">
-                        <!--<li><i class="fa fa-phone fa-fw"></i> +45 46 46 03 90</li>-->
+                        <li><i class="fa fa-phone fa-fw"></i> +45 21 12 57 42</li>
                         <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:LAB16@kea.dk">lab16@kea.dk</a>
                         </li>
                     </ul>
