--- a/machinePage_3DPrint_Gips.html
+++ b/machinePage_3DPrint_Gips.html
@@ -72,7 +72,7 @@
 
                     <div class="col-lg-5">
                         <div class="banner-content text-right">
-                            <span class="text-white top text-uppercase">KEA Makerlab </span>
+                            <span class="text-white top text-uppercase">KEA LAB 16 </span>
                             <h1 class="text-white text-uppercase">ZPRINTER 450</h1>
                             <ul>
                                 <li> <i class="fa fa-square-o fa-fw fa-1x"></i> Build Volume: 203 mm x 254 mm 203 mm </li>
@@ -252,27 +252,26 @@
             </small>
         </section>
 
-        <!-- Footer -->
+<!-- Footer -->
         <footer>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12  text-center">
                         <br>
-                        <h4><strong>Makerlab</strong>
+                        <h4><strong>LAB 16</strong>
                         </h4>
                         <p>KEA / KØBENHAVNS ERHVERVSAKADEMI
-                            <br>Guldbergsgade 29N, P0</p>
+                            <br>Lygten 16, B002</p>
                         <ul class="list-unstyled">
-                            <li><i class="fa fa-phone fa-fw"></i> +45 46 46 03 90</li>
-                            <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:makerlab@kea.dk">makerlab@kea.dk</a>
+                            <li><i class="fa fa-phone fa-fw"></i> +45 21 12 57 42</li>
+                            <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:makerlab@kea.dk">lab16@kea.dk</a>
                             </li>
                         </ul>
                         <br>
                         <p> <b>OPENING TIME:</b></p>
                         <ul class="list-unstyled">
                             <!--  <li> <font  color="red"><i class="fa fa-asterisk" aria-hidden="true"></i> <b>Closed for summer! Open 26 Aug.</b> </font>-->
-                            <li><i class="fa fa-clock-o fa-fw"></i> <b>Workshop:</b> Mon-Fri, 09-18</li>
-                            <li><i class="fa fa-clock-o fa-fw"></i><b>Work area:</b> Mon-Fri, 09-22</li>
+                            <li><i class="fa fa-clock-o fa-fw"></i> <b>Workshop:</b> Mon-Fri, 09-16 (Currently no staff)</li>
                         </ul>
 
 
@@ -286,7 +285,7 @@
 
         </footer>
 
-
+</div>
 
         <script src="js/vendor/jquery-2.2.4.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
