--- a/machinePage_Sticker.html
+++ b/machinePage_Sticker.html
@@ -78,7 +78,7 @@
 
 
                         <div class="banner-content text-right">
-                            <span class="text-white top text-uppercase">KEA Makerlab </span>
+                            <span class="text-white top text-uppercase">KEA Makerlab & LAB 16 </span>
                             <h1 class="text-white text-uppercase">Sticker Print/Cut</h1>
                             <ul>
                                 <li> <i class="fa fa-square-o fa-fw fa-1x"></i> Max cut width: 450mm </li>
@@ -270,18 +270,18 @@
             </small>
         </section>
 
-        <!-- Footer -->
+      <!-- Footer -->
         <footer>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12  text-center">
+                    <div class="col-lg-6  text-center">
                         <br>
                         <h4><strong>Makerlab</strong>
                         </h4>
                         <p>KEA / KØBENHAVNS ERHVERVSAKADEMI
                             <br>Guldbergsgade 29N, P0</p>
                         <ul class="list-unstyled">
-                            <li><i class="fa fa-phone fa-fw"></i> +45 46 46 03 90</li>
+                            <li><i class="fa fa-phone fa-fw"></i> +45 23 69 61 77</li>
                             <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:makerlab@kea.dk">makerlab@kea.dk</a>
                             </li>
                         </ul>
@@ -299,11 +299,35 @@
                         <br>
 
                     </div>
+                    <div class="col-lg-6  text-center">
+                        <br>
+                        <h4><strong>LAB 16</strong>
+                        </h4>
+                        <p>KEA / KØBENHAVNS ERHVERVSAKADEMI
+                            <br>Lygten 16, B002</p>
+                        <ul class="list-unstyled">
+                            <li><i class="fa fa-phone fa-fw"></i> +45 21 12 57 42</li>
+                            <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:makerlab@kea.dk">lab16@kea.dk</a>
+                            </li>
+                        </ul>
+                        <br>
+                        <p> <b>OPENING TIME:</b></p>
+                        <ul class="list-unstyled">
+                            <!--  <li> <font  color="red"><i class="fa fa-asterisk" aria-hidden="true"></i> <b>Closed for summer! Open 26 Aug.</b> </font>-->
+                            <li><i class="fa fa-clock-o fa-fw"></i> <b>Workshop:</b> Mon-Fri, 09-16 (Currently no staff)</li>
+                        </ul>
+
+
+                        <br>
+                        <br>
+                        <br>
+
+                    </div>
+                    
                 </div>
             </div>
 
         </footer>
-
 
 
         <script src="js/vendor/jquery-2.2.4.min.js"></script>
