--- a/machinePage_Vaquform.html
+++ b/machinePage_Vaquform.html
@@ -280,21 +280,20 @@
                 <div class="row">
                     <div class="col-lg-12  text-center">
                         <br>
-                        <h4><strong>LAB16</strong>
+                        <h4><strong>LAB 16</strong>
                         </h4>
                         <p>KEA / KØBENHAVNS ERHVERVSAKADEMI
                             <br>Lygten 16, B002</p>
                         <ul class="list-unstyled">
-                            <li><i class="fa fa-phone fa-fw"></i> +45 46 46 03 90</li>
-                            <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:makerlab@kea.dk">LAB16@kea.dk</a>
+                            <li><i class="fa fa-phone fa-fw"></i> +45 21 12 57 42</li>
+                            <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:makerlab@kea.dk">lab16@kea.dk</a>
                             </li>
                         </ul>
                         <br>
                         <p> <b>OPENING TIME:</b></p>
                         <ul class="list-unstyled">
                             <!--  <li> <font  color="red"><i class="fa fa-asterisk" aria-hidden="true"></i> <b>Closed for summer! Open 26 Aug.</b> </font>-->
-                            <li><i class="fa fa-clock-o fa-fw"></i> <b>Workshop:</b> Mon-Fri, 09-16</li>
-                            <li><i class="fa fa-clock-o fa-fw"></i><b>Work area:</b> Mon-Fri, 09-16</li>
+                            <li><i class="fa fa-clock-o fa-fw"></i> <b>Workshop:</b> Mon-Fri, 09-16 (Currently no staff)</li>
                         </ul>
 
 
@@ -308,6 +307,7 @@
 
         </footer>
 
+</div>
 
 
         <script src="js/vendor/jquery-2.2.4.min.js"></script>
