Updated witgh right phone nr and opening times

--- a/machinePage_Tshirt.html
+++ b/machinePage_Tshirt.html
@@ -326,8 +326,8 @@
                         <p> <b>OPENING TIME:</b></p>
                         <ul class="list-unstyled">
                             <!--  <li> <font  color="red"><i class="fa fa-asterisk" aria-hidden="true"></i> <b>Closed for summer! Open 26 Aug.</b> </font>-->
-                            <li><i class="fa fa-clock-o fa-fw"></i> <b>Workshop:</b> Mon-Fri, 09-18</li>
-                            <li><i class="fa fa-clock-o fa-fw"></i><b>Work area:</b> Mon-Fri, 09-22</li>
+                            <li><i class="fa fa-clock-o fa-fw"></i> <b>Workshop:</b> Mon-Fri,  09-18</li>
+                            <li><i class="fa fa-clock-o fa-fw"></i><b>Work area:</b> Mon-Fri, 09-22 / Sat-Sun, 10-22</li>
                         </ul>
 
 
