--- a/machinePage_3DPrint_Ultimaker.html
+++ b/machinePage_3DPrint_Ultimaker.html
@@ -308,8 +308,8 @@
                         <p> <b>OPENING TIME:</b></p>
                         <ul class="list-unstyled">
                             <!--  <li> <font  color="red"><i class="fa fa-asterisk" aria-hidden="true"></i> <b>Closed for summer! Open 26 Aug.</b> </font>-->
-                            <li><i class="fa fa-clock-o fa-fw"></i> <b>Workshop:</b> Mon-Fri, 09-18</li>
-                            <li><i class="fa fa-clock-o fa-fw"></i><b>Work area:</b> Mon-Fri, 09-22</li>
+                            <li><i class="fa fa-clock-o fa-fw"></i> <b>Workshop:</b> Mon-Fri,  09-18</li>
+                            <li><i class="fa fa-clock-o fa-fw"></i><b>Work area:</b> Mon-Fri, 09-22 / Sat-Sun, 10-22</li>
                         </ul>
 
 
@@ -325,7 +325,7 @@
                         <p>KEA / KØBENHAVNS ERHVERVSAKADEMI
                             <br>Lygten 16, B002</p>
                         <ul class="list-unstyled">
-                            <li><i class="fa fa-phone fa-fw"></i> +45 21 12 57 42</li>
+                            <li><i class="fa fa-phone fa-fw"></i> +45 51 27 83 14</li>
                             <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:makerlab@kea.dk">lab16@kea.dk</a>
                             </li>
                         </ul>
