--- a/lab16.html
+++ b/lab16.html
@@ -173,7 +173,7 @@
                                 <i class="fa fa-calendar fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>3D Print (SLA): <br> Figure 4 </strong>
+                                    <strong>3D Print (DLP): <br> Figure 4 </strong>
                                 </h4>
                                 <p>Video tutorial, assets files, and a lot more...</p>
                                 <br>
