--- a/kea_store.html
+++ b/kea_store.html
@@ -76,7 +76,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>KEA Store, only for KEA students.</h2>
-                    <p class="lead">Message us on our FB page if you have any questions and we’ll get back to you as soon as possible.</p>
+                    <p class="lead">E-mail us @ <i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:popupandstore@kea.dk">popupandstore@kea.dk</a> if you have any questions and we’ll get back to you as soon as possible.</p>
                 </div>
             </div>
             <!-- /.row -->
@@ -95,7 +95,7 @@
                     <h2>KEA Store features:</h2>
                     <hr class="small">
                     <div class="row">
-                        <div class="col-md-4 col-sm-6">
+                        <div class="col-md-6 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x "></i>
@@ -109,7 +109,7 @@
                                 <a href="store_shop.html" class="btn btn-light">Now that is a bargain!</a>
                             </div>
                         </div>
-                        <div class="col-md-4 col-sm-6">
+                        <div class="col-md-6 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -123,6 +123,7 @@
                                 <a href="store_exhibit.html" class="btn btn-light">Yes, I want to do that!</a>
                             </div>
                         </div>
+                        <!--
                         <div class="col-md-4 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
@@ -136,7 +137,7 @@
                                 
                                 <a href="store_lend.html" class="btn btn-light">Cant believe it free!</a>
                             </div>
-                        </div>
+                        </div> -->
 
 
                     </div>
