modified text on access button

--- a/makerlab.html
+++ b/makerlab.html
@@ -76,7 +76,7 @@
                     <br>
                     <br>
                     <br>
-                    <a href="https://bit.ly/makerlabAccess"><button type="button" class="btn btn-primary btn-lg" > <strong>JOIN Makerlab Access Cource here! </strong>
+                    <a href="https://bit.ly/makerlabAccess"><button type="button" class="btn btn-primary btn-lg" > <strong>JOIN Makerlab & LAB 16 Access Cource here!  </strong>
                         <br>
                         <br>
                             
