--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="row">
                 <br>
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <a href="https://bit.ly/makerlabAccess"><button type="button" class="btn btn-primary btn-lg" > <strong>JOIN Makerlab Access Cource here! </strong>
+                    <a href="https://bit.ly/makerlabAccess"><button type="button" class="btn btn-primary btn-lg" > <strong>JOIN Makerlab & LAB 16 Access Cource here! </strong>
                         <br>
                         <br>
                         
