--- a/lab16.html
+++ b/lab16.html
@@ -76,7 +76,7 @@
                     <br>
                     <br>
                     <br> 
-                    <a href="https://bit.ly/makerlabAccess"><button type="button" class="btn btn-primary btn-lg" > <strong>JOIN Makerlab Access Cource here! </strong>
+                    <a href="https://bit.ly/makerlabAccess"><button type="button" class="btn btn-primary btn-lg" > <strong>JOIN LAB 16 & Makerlab Access Cource here!  </strong>
                         <br>
                         <br>
                             
